--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = "^4.1.2"
 djangorestframework = "^3.14.0"
 djangorestframework-simplejwt = "^5.2.2"
 psycopg2 = "^2.9.5"
+django-environ = "^0.9.0"
 
 
 [build-system]
