fixed api healthcheck

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,7 +29,7 @@ services:
     ports:
       - "8000:8000"
     healthcheck:
-      test: curl -sS http://127.0.0.1:8000/ping/ || exit 1
+      test: curl -sS http://127.0.0.1:8000/ping/ || echo 1
       interval: 3s
       timeout: 3s
       retries: 3
