--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -61,7 +61,6 @@ jobs:
       - name: Render template
         run: |
           echo "$VAULT_PASSWORD" > /tmp/.vault_pass.txt
-          ansible-vault decrypt ./deploy/nginx/default.conf
           ansible-vault decrypt ./deploy/docker-compose.yaml
           ansible-vault decrypt ./deploy/env
           mv deploy/env deploy/.env
@@ -78,7 +77,7 @@ jobs:
           strip_components: 1
 
       - name: run docker-compose
-        uses: appleboy/ssh-action@master
+        uses: appleboy/ssh-action@v0.1.6
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
@@ -89,7 +88,7 @@ jobs:
 
       - name: clear after deploy
         if: always()
-        uses: appleboy/ssh-action@master
+        uses: appleboy/ssh-action@v0.1.6
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
