--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -37,8 +37,9 @@ services:
     networks:
       - backend_td
       - frontend_td
-    volumes:
-      - ./:/opt/todolist
+# уже нет необходимости, так как создал dockerignore и изменил dockerfile, удалил чтобы не загрязнять контейнер
+#    volumes:
+#      - ./:/opt/todolist
 
   postgres:
     image: postgres:latest
