--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,12 @@ djangorestframework = "^3.14.0"
 djangorestframework-simplejwt = "^5.2.2"
 psycopg2 = "^2.9.5"
 django-environ = "^0.9.0"
+social-auth-app-django = "^5.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
 ansible-vault-win = "^1.0.0"
+django-extensions = "^3.2.1"
 
 [build-system]
 requires = ["poetry-core"]
