--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ django-environ = "^0.9.0"
 
 [tool.poetry.group.dev.dependencies]
 ansible-vault-win = "^1.0.0"
+django-extensions = "^3.2.1"
 
 [build-system]
 requires = ["poetry-core"]
