--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ djangorestframework = "^3.14.0"
 djangorestframework-simplejwt = "^5.2.2"
 psycopg2 = "^2.9.5"
 django-environ = "^0.9.0"
+social-auth-app-django = "^5.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
