--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ djangorestframework-simplejwt = "^5.2.2"
 psycopg2 = "^2.9.5"
 django-environ = "^0.9.0"
 social-auth-app-django = "^5.1.0"
+django-filter = "^23.1"
 
 
 [tool.poetry.group.dev.dependencies]
