--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ psycopg2 = "^2.9.5"
 django-environ = "^0.9.0"
 social-auth-app-django = "^5.1.0"
 django-filter = "^23.1"
+pydantic = "^1.10.7"
 
 
 [tool.poetry.group.dev.dependencies]
