--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -37,8 +37,22 @@ services:
       - backend_td
       - frontend_td
 
+  bot:
+    image: amikhailov5593/todolist:latest
+    restart: always
+    env_file:
+      - .env
+    environment:
+      POSTGRES_HOST: postgres
+    depends_on:
+      postgres:
+        condition: service_healthy
+    command: python manage.py runbot
+    networks:
+      - backend_td
+
   front:
-    image: sermalenk/skypro-front:lesson-37
+    image: sermalenk/skypro-front:lesson-38
     restart: always
     ports:
       - "80:80"
