--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -23,7 +23,7 @@ services:
     env_file:
       - .env
     environment:
-      POSTGRES_HOST: $POSTGRES_HOST
+      POSTGRES_HOST: postgres
     depends_on:
       postgres:
         condition: service_healthy
@@ -43,7 +43,7 @@ services:
     env_file:
       - .env
     environment:
-      POSTGRES_HOST: $POSTGRES_HOST
+      POSTGRES_HOST: postgres
     depends_on:
       postgres:
         condition: service_healthy
