--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,7 +22,7 @@ services:
     env_file:
       - .env
     environment:
-      POSTGRES_HOST: $POSTGRES_HOST
+      POSTGRES_HOST: postgres
     depends_on:
       postgres:
         condition: service_healthy
@@ -44,7 +44,7 @@ services:
     env_file:
       - .env
     environment:
-      POSTGRES_HOST: $POSTGRES_HOST
+      POSTGRES_HOST: postgres
     depends_on:
       postgres:
         condition: service_healthy
