--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,18 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.9"
 django = "^4.1.2"
-djangorestframework = "^3.14.0"
 djangorestframework-simplejwt = "^5.2.2"
 psycopg2 = "^2.9.5"
 django-environ = "^0.9.0"
 social-auth-app-django = "^5.1.0"
 django-filter = "^23.1"
 pydantic = "^1.10.7"
+pytest-factoryboy = "^2.5.1"
+pytest = "^7.3.1"
+pytest-django = "^4.5.2"
+pytest-faker = "^2.0.0"
+pytest-random-order = "^1.1.0"
+djangorestframework = "^3.14.0"
 
 
 [tool.poetry.group.dev.dependencies]
